# zerocast

./: .gitignore  CMakeLists.txt  LICENSE  README.ja.md  README.md  compose.yaml
src/: argparse.c  argparse.h  compress.c  compress.h  decompress.c  decompress.h  main.c  reader.c  reader.h  zerocast.h
